# tabstate-util

./: Cargo.toml  LICENSE  README.md  TabState.bt
src/: consts.rs  enums.rs  footer.rs  header.rs  lib.rs  metadata.rs  options.rs  unsaved.rs  util.rs  varint.rs
src/refs/: mod.rs  varint.rs
src/refs/tabstate/: buffer.rs  cursor.rs  metadata.rs  mod.rs  saved.rs  unsaved.rs
