[package]
name = "tabstate-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffer-reader = { git = "https://github.com/Nordgaren/buffer-reader.git" }
#buffer-reader = { path = "../buffer-reader" }
widestring = "1.0.2"
bytemuck = { version = "1.14.3", features = ["derive", "min_const_generics"] }